Fixed share buttons alignment issue in the blue bar. Completed todo http://goo.gl/PNRwb and http://goo.gl/UPYDG

--- a/web/less/frontend/main.less
+++ b/web/less/frontend/main.less
@@ -516,22 +516,20 @@ a.bold-links {
   font-size: 85%;
 
   .addthis_toolbox {
-    margin-top: -3px;
+
   }
 }
 
 .addthis_button_facebook_like
 {
-  margin-top:2px;
   overflow:hidden;
   width:46px;
 }
 
 .addthis_button_tweet
 {
-  margin-top:2px;
   overflow:hidden;
-  width:54px;
+	.size(20px,59px);
 }
 
 .addthis_button_pinterest_pinit
@@ -542,12 +540,12 @@ a.bold-links {
 
 .addthis_button_google_plusone
 {
-  margin-top:2px;
+	height: 20px;
 }
 
 .addthis_button_email
 {
-  margin-top:4px;
+
 }
 
 @import "_collections.less";
